Multiplayer: Update to MPAPI 0.1

--- a/Source/Outfitted.csproj
+++ b/Source/Outfitted.csproj
@@ -40,9 +40,8 @@
       <HintPath>..\Dlls\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="0UnofficialMultiplayerAPI">
-      <HintPath>..\Dlls\0UnofficialMultiplayerAPI.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="0MultiplayerAPI">
+      <HintPath>..\Dlls\0MultiplayerAPI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
