--- a/Source/Outfitted.csproj
+++ b/Source/Outfitted.csproj
@@ -1,33 +1,26 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FA3B0C98-33FD-4B87-9AA6-75F01735243F}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>Outfitted</RootNamespace>
-    <AssemblyName>Outfitted</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFramework>net472</TargetFramework>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <OutputPath>..\Assemblies\</OutputPath>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+    <DebugType>None</DebugType>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>false</DebugSymbols>
-    <DebugType>
-    </DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>..\Assemblies</OutputPath>
-    <DefineConstants>DEBUG</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <Optimize>true</Optimize>
-    <OutputPath>..\Assemblies</OutputPath>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
-  </PropertyGroup>
+
   <ItemGroup>
+
+    <!-- Nuget dependencies -->
+    <PackageReference Include="Lib.Harmony">
+      <Version>2.0.4</Version>
+      <ExcludeAssets>runtime</ExcludeAssets>
+    </PackageReference>
+    <PackageReference Include="RimWorld.MultiplayerAPI">
+      <Version>0.3.0</Version>
+    </PackageReference>
+
+    <!-- Local dependencies -->
     <Reference Include="System" />
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
@@ -45,41 +38,7 @@
       <HintPath>..\..\..\RimWorldWin64_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="OutfittedMod.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ExtendedOutfit.cs" />
-    <Compile Include="DefOfs\StatDefOf.cs" />
-    <Compile Include="WorkPriorities.cs" />
-    <Compile Include="ResourceBank.cs" />
-    <Compile Include="StatPriority.cs" />
-    <Compile Include="Patches\Dialog_ManageOutfits_Patch.cs" />
-    <Compile Include="Patches\OutfitDatabase_Patch.cs" />
-    <Compile Include="Patches\JobGiver_OptimizeApparel_Patch.cs" />
-    <Compile Include="Widgets\Widgets_FloatRange.cs" />
-    <Compile Include="Patches\Thing_DrawGUIOverlay_Patch.cs" />
-    <Compile Include="Patches\PlaySettings_DoPlaySettingsGlobalControls_Patch.cs" />
-    <Compile Include="Multiplayer.cs" />
-    <Compile Include="DefOfs\WorkTypeDefOf.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Krafs.Rimworld.Ref">
-      <Version>1.2.2719</Version>
-    </PackageReference>
-    <PackageReference Include="Lib.Harmony">
-      <Version>2.0.2</Version>
-    </PackageReference>
-    <PackageReference Include="RimWorld.MultiplayerAPI">
-      <Version>0.2.0</Version>
-    </PackageReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ProjectExtensions>
-    <MonoDevelop>
-      <Properties>
-        <Deployment.LinuxDeployData generatePcFile="False" />
-      </Properties>
-    </MonoDevelop>
-  </ProjectExtensions>
+  
 </Project>
